; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_keyb.c_setup_abe.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_keyb.c_setup_abe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@rofi_bindings = common dso_local global %struct.TYPE_4__* null, align 8
@xrm_String = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_abe() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.TYPE_4__*, align 8
  store i64 0, i64* %1, align 8
  br label %3

3:                                                ; preds = %29, %0
  %4 = load i64, i64* %1, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @rofi_bindings, align 8
  %6 = call i64 @G_N_ELEMENTS(%struct.TYPE_4__* %5)
  %7 = icmp ult i64 %4, %6
  br i1 %7, label %8, label %32

8:                                                ; preds = %3
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @rofi_bindings, align 8
  %10 = load i64, i64* %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i64 %10
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %2, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @g_strdup(i32 %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @xrm_String, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = bitcast i32* %23 to i8**
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @config_parser_add_option(i32 %18, i32 %21, i8** %24, i32 %27)
  br label %29

29:                                               ; preds = %8
  %30 = load i64, i64* %1, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %1, align 8
  br label %3

32:                                               ; preds = %3
  ret void
}

declare dso_local i64 @G_N_ELEMENTS(%struct.TYPE_4__*) #1

declare dso_local i32 @g_strdup(i32) #1

declare dso_local i32 @config_parser_add_option(i32, i32, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
